--- a/themes/forumsite/assets/css/partials/_header.scss
+++ b/themes/forumsite/assets/css/partials/_header.scss
@@ -1,21 +1,28 @@
 .banner {
   background-repeat: no-repeat;
   background-size: cover;
-  height: 350px;
+  min-height: 350px;
 
-  .banner-content {
-    padding: 30px 20px;
-    text-shadow: 2px 2px black;
-  }
-
-  @media (min-width: 768px) {
+.banner-content-wrapper {
+    min-height: inherit;
     .banner-content {
-      background-color: rgba(0, 0, 0, 0.8);
+      padding: 30px 20px;
+      text-shadow: 2px 2px black;
     }
-  }
 
-  h1, h2, h3, h4, h5, h6, p {
-    margin-bottom: 0;
-    color: #fff;
+    .header-spacer {
+      height: 100px;
+    }
+
+    @media (min-width: 768px) {
+      .banner-content {
+        background-color: rgba(0, 0, 0, 0.6);
+      }
+    }
+
+    h1, h2, h3, h4, h5, h6, p {
+      margin-bottom: 0;
+      color: #fff;
+    }
   }
 }
